--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Antigravity App Launcher</title>
+    <title>App Launcher</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 
     <main class="container">
         <header class="header">
-            <h1>Antigravityで作ったツール(無保証、自己責任でよろ)</h1>
+            <h2>AntigravityとかCodexとかで作ったツール(無保証、自己責任でよろ)</h2>
             <p>Select an application to launch</p>
         </header>
 
